--- a/app/src/main/res/layout/contact_list_item.xml
+++ b/app/src/main/res/layout/contact_list_item.xml
@@ -8,11 +8,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="Davide Dolci"
-        android:id="@+id/textView"
+        android:id="@+id/nameLabel"
         android:textSize="20sp"
+        android:textColor="@color/contact_color"
         android:layout_alignParentTop="true"
+        android:paddingBottom="15dp"
+        android:paddingTop="15dp"
+        android:paddingLeft="15dp"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="100dp"
         android:layout_marginTop="2dp"
         android:layout_alignParentStart="true"/>
 </RelativeLayout>
