--- a/app/src/main/res/layout/contact_list_item.xml
+++ b/app/src/main/res/layout/contact_list_item.xml
@@ -13,9 +13,31 @@
         android:textColor="@color/contact_color"
         android:layout_alignParentTop="true"
         android:paddingBottom="15dp"
+        android:textStyle="bold"
         android:paddingTop="15dp"
         android:paddingLeft="15dp"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="2dp"
         android:layout_alignParentStart="true"/>
+
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:id="@+id/messageButton"
+        android:src="@drawable/ic_send"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="39dp"
+        android:layout_marginEnd="39dp"/>
+
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:id="@+id/callButton"
+        android:src="@drawable/ic_call"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/messageButton"
+        android:layout_toStartOf="@+id/messageButton"
+        android:layout_marginRight="20dp"/>
 </RelativeLayout>
