--- a/app/src/main/res/menu/menu_contacts.xml
+++ b/app/src/main/res/menu/menu_contacts.xml
@@ -2,8 +2,22 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="com.next.simply.ui.Contacts">
-    <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
+    <item android:id="@+id/action_show_contacts"
+          android:title="@string/action_show_contacts"
           android:orderInCategory="100"
           app:showAsAction="never"/>
+
+    <item android:id="@+id/action_sort_by"
+          android:title="@string/action_sort_by"
+          app:showAsAction="never"/>
+
+    <item android:id="@+id/action_import_export"
+          android:title="@string/action_import_export"
+          app:showAsAction="never"/>
+
+    <item android:id="@+id/action_search"
+          android:title="@string/action_search"
+          android:icon="@drawable/ic_search"
+          app:showAsAction="ifRoom" />
+
 </menu>
