--- a/app/src/main/res/layout/activity_sort_by.xml
+++ b/app/src/main/res/layout/activity_sort_by.xml
@@ -8,9 +8,21 @@
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context="com.next.simply.ui.SortByActivity">
 
-    <TextView
-        android:text="sort by"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <RadioButton
+            android:id="@+id/nameButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="@string/radio_button_first"/>
+        <RadioButton
+            android:id="@+id/surnameButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/radio_button_second"/>
+    </RadioGroup>
 
 </RelativeLayout>
