--- a/app/src/main/res/menu/menu_edit_contact.xml
+++ b/app/src/main/res/menu/menu_edit_contact.xml
@@ -2,8 +2,13 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="com.next.simply.ui.EditContactActivity">
-    <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
+    <item android:id="@+id/action_delete"
+          android:title="@string/action_delete"
           android:orderInCategory="100"
           app:showAsAction="never"/>
+
+    <item android:id="@+id/action_edit"
+          android:icon="@drawable/ic_mode_edit"
+          app:showAsAction="ifRoom"
+          android:title="@string/action_edit" />
 </menu>
