--- a/app/src/main/res/menu/menu_show_contacts.xml
+++ b/app/src/main/res/menu/menu_show_contacts.xml
@@ -2,7 +2,7 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="com.next.simply.ui.ShowContactsActivity">
-    <item android:id="@+id/action_settings"
+    <item android:id="@+id/action_delete"
           android:title="@string/action_settings"
           android:orderInCategory="100"
           app:showAsAction="never"/>
