--- a/app/src/main/res/layout/activity_import_export_contact.xml
+++ b/app/src/main/res/layout/activity_import_export_contact.xml
@@ -8,9 +8,32 @@
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context="com.next.simply.ui.ImportExportContactActivity">
 
+
     <TextView
-        android:text="import export"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:text="@string/import_sim"
+        android:id="@+id/importFromSim"
+        android:textSize="30dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/export_sim"
+        android:textSize="30dp"
+        android:id="@+id/exportToSim"
+        android:layout_below="@+id/importFromSim"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
