--- a/app/src/main/res/layout/activity_sort_by.xml
+++ b/app/src/main/res/layout/activity_sort_by.xml
@@ -8,18 +8,21 @@
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context="com.next.simply.ui.SortByActivity">
 
-
-        <RadioButton
-            android:id="@+id/nameButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/radio_button_first"/>
-        <RadioButton
-            android:id="@+id/surnameButton"
-            android:layout_below="@+id/nameButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/radio_button_second"/>
+    <RadioGroup
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+            <RadioButton
+                android:id="@+id/nameButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/radio_button_first"/>
+            <RadioButton
+                android:id="@+id/surnameButton"
+                android:layout_below="@+id/nameButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/radio_button_second"/>
+    </RadioGroup>
 
 
 </RelativeLayout>
