--- a/app/src/main/res/menu/menu_contacts.xml
+++ b/app/src/main/res/menu/menu_contacts.xml
@@ -18,6 +18,8 @@
     <item android:id="@+id/action_search"
           android:title="@string/action_search"
           android:icon="@drawable/ic_search"
-          app:showAsAction="ifRoom" />
+          app:showAsAction="collapseActionView|ifRoom"
+          app:actionViewClass="android.support.v7.widget.SearchView"
+          android:actionViewClass="android.support.v7.widget.SearchView" />
 
 </menu>
