--- a/app/src/main/res/layout/activity_add_contact.xml
+++ b/app/src/main/res/layout/activity_add_contact.xml
@@ -46,8 +46,8 @@
         android:layout_alignParentStart="true"/>
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:id="@+id/addContactImageView"
         android:src="@drawable/ic_add_circle"
         android:layout_alignParentBottom="true"
