--- a/app/src/main/res/layout/contact_list_item.xml
+++ b/app/src/main/res/layout/contact_list_item.xml
@@ -21,8 +21,8 @@
         android:layout_alignParentStart="true"/>
 
     <ImageView
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/messageButton"
         android:src="@drawable/ic_send"
         android:layout_centerVertical="true"
@@ -32,8 +32,8 @@
         android:layout_marginEnd="39dp"/>
 
     <ImageView
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/callButton"
         android:src="@drawable/ic_call"
         android:layout_centerVertical="true"
