--- a/app/src/main/res/layout/activity_add_contact.xml
+++ b/app/src/main/res/layout/activity_add_contact.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
+                android:background="@android:color/white"
                 android:layout_height="match_parent"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
@@ -12,6 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/nameEditText"
+        android:background="@null"
+        style="@style/textTheme"
         android:hint="@string/add_contact_name"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -29,6 +32,8 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@null"
+        style="@style/textTheme"
         android:id="@+id/telephoneEditText"
         android:hint="@string/add_contact_telephone"
         android:layout_below="@+id/imageView"
