--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -13,15 +13,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/listView"
+        android:divider="@drawable/ic_line_gold"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        style="@style/scrollTheme"/>
 
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:text="No contacts to display"
+        android:text="@string/contact_empty"
         android:id="@+id/empty"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textColor="@color/contact_color"
+        android:layout_alignParentTop="true"
+        android:paddingBottom="15dp"
+        android:paddingTop="15dp"
+        android:paddingLeft="15dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="2dp"
+        android:layout_alignParentStart="true"
+        android:id="@+id/empty2"/>
 
     <ImageView
         android:layout_width="60dp"
