--- a/app/src/main/res/layout/activity_sort_by.xml
+++ b/app/src/main/res/layout/activity_sort_by.xml
@@ -3,6 +3,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:background="@android:color/white"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
@@ -10,19 +11,45 @@
 
     <RadioGroup
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_marginTop="10dp"
+        android:layout_height="fill_parent"
+        android:id="@+id/radioGroup">
             <RadioButton
                 android:id="@+id/nameButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                style="@style/radioButton"
                 android:text="@string/radio_button_first"/>
-            <RadioButton
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:src="@drawable/ic_line_gold"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView2"/>
+
+        <RadioButton
                 android:id="@+id/surnameButton"
                 android:layout_below="@+id/nameButton"
                 android:layout_width="match_parent"
+                style="@style/radioButton"
                 android:layout_height="wrap_content"
                 android:text="@string/radio_button_second"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_line_gold"
+            android:id="@+id/imageView8"/>
     </RadioGroup>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_line_gold"
+        android:id="@+id/imageView7"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
 
 </RelativeLayout>
