--- a/app/src/main/res/layout/contact_list_item.xml
+++ b/app/src/main/res/layout/contact_list_item.xml
@@ -9,16 +9,10 @@
         android:layout_height="wrap_content"
         tools:text="Davide Dolci"
         android:id="@+id/nameLabel"
-        android:textSize="20sp"
         android:textColor="@color/contact_color"
-        android:layout_alignParentTop="true"
-        android:paddingBottom="15dp"
-        android:textStyle="bold"
+        style="@style/textTheme"
         android:paddingTop="15dp"
-        android:paddingLeft="15dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="2dp"
-        android:layout_alignParentStart="true"/>
+        android:layout_marginTop="2dp"/>
 
     <ImageView
         android:layout_width="wrap_content"
