--- a/app/src/main/res/layout/activity_edit_contact.xml
+++ b/app/src/main/res/layout/activity_edit_contact.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
+                android:background="@android:color/white"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -11,7 +12,9 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        style="@style/textTheme"
         android:id="@+id/nameContactEditText"
+        android:background="@null"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
@@ -19,8 +22,37 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@null"
+        style="@style/textTheme"
         android:id="@+id/numberNameContactEditText"
         android:layout_below="@+id/nameContactEditText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_line_gold"
+        android:id="@+id/imageView12"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:src="@drawable/ic_line_gold"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView13"
+        android:layout_below="@+id/nameContactEditText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignStart="@+id/nameContactEditText"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:src="@drawable/ic_line_gold"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView14"
+        android:layout_below="@+id/numberNameContactEditText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
 </RelativeLayout>
