--- a/app/src/main/res/layout/activity_show_contacts.xml
+++ b/app/src/main/res/layout/activity_show_contacts.xml
@@ -22,7 +22,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_line_gold"
+        android:src="@drawable/ic_line_white"
         android:id="@+id/imageView4"/>
 
     <RadioButton
@@ -33,7 +33,7 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:src="@drawable/ic_line_gold"
+        android:src="@drawable/ic_line_white"
         android:layout_height="wrap_content"
         android:id="@+id/imageView5"/>
 
@@ -45,7 +45,7 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:src="@drawable/ic_line_gold"
+        android:src="@drawable/ic_line_white"
         android:layout_height="wrap_content"
         android:id="@+id/imageView6"/>
 </RadioGroup>
@@ -53,7 +53,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_line_gold"
+        android:src="@drawable/ic_line_white"
         android:id="@+id/imageView7"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
