--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="color_primary">#d5a940</color>
+    <color name="color_primary">#26A0DD</color>
     <color name="contact_color">#646363</color>
 </resources>
